cleanup role structure